# coglang

./: .mailmap  ADOPTING.md  CONTRIBUTING.md  CogLang_Conformance_Suite_v1_1_0.md  CogLang_Contribution_Guide_v0_1.md  CogLang_Contribution_Guide_v0_1.zh-CN.md  CogLang_HRC_Companion_Asset_Classification_v0_1.md  CogLang_HRC_v0_2_Freeze_Candidate_2026_04_28.md  CogLang_Host_Runtime_Contract_v0_1.md  CogLang_Host_Runtime_Contract_v0_1.zh-CN.md  CogLang_Minimal_CI_Baseline_v0_1.json  CogLang_Open_Source_Boundary_v0_1.json  CogLang_Operator_Catalog_v1_1_0.md  CogLang_Operator_Catalog_v1_1_0.zh-CN.md  CogLang_Profiles_and_Capabilities_v1_1_0.md  CogLang_Public_Repo_Extract_Manifest_v0_1.json  CogLang_Quickstart_v1_1_0.md  CogLang_Quickstart_v1_1_0.zh-CN.md  CogLang_Readable_Render_API_Promotion_Checklist_v0_1.md  CogLang_Readable_Render_Golden_Example_Candidates_v0_1.md  CogLang_Release_Notes_v1_1_0.md  CogLang_Release_Notes_v1_1_0.zh-CN.md  CogLang_Release_Notes_v1_1_0_pre.md  CogLang_Release_Notes_v1_1_0_pre.zh-CN.md  CogLang_Release_Notes_v1_1_2.md  CogLang_Release_Notes_v1_1_2.zh-CN.md  CogLang_Release_Notes_v1_1_3.md  CogLang_Release_Notes_v1_1_4.zh-CN.md  CogLang_Release_Notes_v1_1_5.zh-CN.md  CogLang_Release_Notes_v1_1_6.zh-CN.md  CogLang_Reserved_Operator_Promotion_Criteria_v0_1.md  CogLang_Small_Scale_Promotion_Plan_v0_1.md  CogLang_Specification_v1_1_0_Draft.md  CogLang_Specification_v1_1_0_Draft.zh-CN.md  CogLang_Standalone_Install_and_Release_Guide_v0_1.md  CogLang_Standalone_Install_and_Release_Guide_v0_1.zh-CN.md  CogLang_Vision_Proposal_v0_1.md  CogLang_v1_2_Effect_Budget_Preflight_Vocabulary_v0_1.md  LICENSE  MAINTENANCE.md  (+6 more)
scripts/: local_ci.py
src/coglang/_public_assets/: .gitignore  AGENTS.md  CONTRIBUTING.md  CogLang_Announcement_Kit_v0_1.md  CogLang_Conformance_Suite_v1_1_0.md  CogLang_Conformance_Suite_v1_1_0.zh-CN.md  CogLang_Contribution_Guide_v0_1.md  CogLang_Contribution_Guide_v0_1.zh-CN.md  CogLang_Generation_Eval_Request_Response_Contract_v0_1.md  CogLang_HRC_v0_2_Final_Freeze_2026_04_28.md  CogLang_Host_Runtime_Contract_v0_1.md  CogLang_Host_Runtime_Contract_v0_1.zh-CN.md  CogLang_Minimal_CI_Baseline_v0_1.json  CogLang_Open_Source_Boundary_v0_1.json  CogLang_Operator_Catalog_v1_1_0.md  CogLang_Operator_Catalog_v1_1_0.zh-CN.md  CogLang_Profiles_and_Capabilities_v1_1_0.md  CogLang_Public_Repo_Extract_Manifest_v0_1.json  CogLang_Python_Schema_Sidecar_Ecosystem_Plan_v0_1.md  CogLang_Quickstart_v1_1_0.md  CogLang_Quickstart_v1_1_0.zh-CN.md  CogLang_Readable_Render_Boundary_v0_1.md  CogLang_Release_Notes_v1_1_0_pre.md  CogLang_Release_Notes_v1_1_1.md  CogLang_Release_Notes_v1_1_1.zh-CN.md  CogLang_Release_Notes_v1_1_3.zh-CN.md  CogLang_Release_Notes_v1_1_4.md  CogLang_Release_Notes_v1_1_5.md  CogLang_Release_Notes_v1_1_5.zh-CN.md  CogLang_Release_Notes_v1_1_6.md  CogLang_Send_Carry_Forward_Exit_Matrix_v0_1.md  CogLang_Specification_v1_1_0_Draft.md  CogLang_Specification_v1_1_0_Draft.zh-CN.md  CogLang_Standalone_Install_and_Release_Guide_v0_1.md  CogLang_Standalone_Install_and_Release_Guide_v0_1.zh-CN.md  CogLang_Use_Cases_and_Positioning_v0_1.md  CogLang_Vision_Proposal_v0_1.md  CogLang_v1_2_Evolution_Boundary_Proposal_v0_1.md  MAINTENANCE.md  README.md  (+5 more)
src/coglang/_public_assets/.github/: PULL_REQUEST_TEMPLATE.md
src/coglang/_public_assets/.github/workflows/: ci.yml  publish.yml
src/coglang/_public_assets/examples/agent_memory_audit_pressure_tests/: agent_memory_audit_pressure_tests.py
src/coglang/_public_assets/examples/generation_eval_offline_runner/: README.md  mock_responses.py
src/coglang/_public_assets/examples/generation_eval_offline_runner/fixtures/: generation_eval_three_case_v0_1.json  mock_responses.jsonl
src/coglang/_public_assets/examples/gitnexus_audit_bridge/: gitnexus_audit_bridge.py
src/coglang/_public_assets/examples/grammar/: coglang.gbnf
src/coglang/_public_assets/examples/interaction_artifact_pressure_tests/fixtures/: interaction_artifact_pressure_tests_v0_1.json
src/coglang/_public_assets/examples/lightrag_audit_bridge/: lightrag_audit_bridge.py
src/coglang/_public_assets/examples/lightrag_audit_bridge/fixtures/: lightrag_extraction_tuples.jsonl
src/coglang/_public_assets/examples/node_host_consumer/: README.md  consume_hrc_envelopes.mjs
src/coglang/_public_assets/examples/node_minimal_host_runtime_stub/: runtime_stub.mjs
src/coglang/_public_assets/examples/outlines_generation_bridge/fixtures/: outlines_generated_expressions.jsonl
src/coglang/_public_assets/examples/python_schema_sidecar/: README.md
src/coglang/_public_assets/examples/readme_end_to_end_audit/: readme_end_to_end_audit.py
src/coglang/_public_assets/examples/semantic_event_audit/: README.md
src/coglang/_public_assets/examples/vscode_textmate_syntax/: README.md
src/coglang/_public_assets/examples/vscode_textmate_syntax/samples/: basic.coglang
src/coglang/_public_assets/examples/vscode_textmate_syntax/syntaxes/: coglang.tmLanguage.json
src/coglang/_public_assets/internal_schemas/host_runtime/v0.1/: local-write-query-result.schema.json  schema-pack.json  write-bundle-candidate.schema.json  write-operation.schema.json
src/coglang/_public_assets/internal_schemas/host_runtime/v0.1/examples/: local-write-submission-record.sample.json  local-write-trace.sample.json  (+1 more)
src/coglang/_public_assets/scripts/: package_asset_audit.py
src/coglang/_public_assets/tests/coglang/: conftest.py  test_boundary.py  test_catalog_alignment.py  test_cli.py  test_completeness.py  test_composition.py  test_executor_interface.py  test_generation_eval.py  test_generation_eval_adapters.py  test_generation_eval_offline_runner.py  test_gitnexus_audit_bridge_example.py  test_grammar_examples.py  test_host_runtime_schema_seeds.py  test_integration.py  test_lightrag_audit_bridge_example.py  test_local_ci_script.py  test_local_host.py  test_node_host_consumer.py  test_open_source_extract.py  test_package_layout.py  test_parser.py  test_preflight.py  test_readable_render_golden_candidates.py  test_readme_end_to_end_audit_example.py  test_schema_versions.py  test_validator.py
(+91 files in other folders)
